--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <link rel="shortcut icon" href="src/img/shop-logo.png" type="image/x-icon">
+
     <title>Tienda Online</title>
 
     <script src="src/js/fontAwesome.js"></script>
@@ -11,8 +14,7 @@
 
 </head>
 <body>
-    <i class="fas fa-user"></i>
-    <i class="fab fa-airbnb"></i>
+    
 
     <script src="src/js/main.js" type="module"></script>
 </body>
