[MOD] Layout With CSS-GRID and new variables

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 
 </head>
 
-<body>
+<body class="grid-container">
 
     <!-- HEADER WEBSITE -->
     <header class="l-header">
 
         <div class="menu__sidebar">
-            <i class="fas fa-bars"></i>
+            <i class="fas fa-bars" ></i>
         </div>
 
         <div class="logo">
@@ -29,7 +29,8 @@
         </div>
 
         <div class="search" id="search">
-            <input type="text" name="" id="search__input">
+            <input type="text" name="" id="searchInput" placeholder="Buscar...">
+
             <buton class="search__btn">
                 <i class="fas fa-search"></i>
             </buton>
@@ -51,7 +52,7 @@
 
     <!-- MAIN CONTENT  -->
     <main class="l-container">
-        <div class="card">
+        <!-- <div class="card">
 
             <div class="card__image">
                 <img src="src/img/nike-shoes.jpg" alt="product-name">
@@ -74,7 +75,7 @@
                 </div>
             </div>
 
-        </div>
+        </div> -->
     </main>
 
     <!-- LEFT PANEL -->
@@ -82,12 +83,12 @@
 
     <!-- MAIN FOOTER -->
     <footer class="l-footer">
-        <div class="footer__icons">
+        <!-- <div class="footer__icons">
             <i class="fab fa-facebook"></i>
             <i class="fab fa-instagram"></i>
             <i class="fab fa-twitter"></i>
         </div>
-        <div class="footer__txt"></div>
+        <div class="footer__txt">Shop &copy; 2020</div> -->
     </footer>
 
 
