[ADDED] Estilos del footer, más algunas modificaciones en variables

--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
 
     <!-- MAIN FOOTER -->
     <footer class="l-footer">
-        <!-- <div class="footer__icons">
+        <div class="footer__icons">
             <i class="fab fa-facebook"></i>
             <i class="fab fa-instagram"></i>
             <i class="fab fa-twitter"></i>
         </div>
-        <div class="footer__txt">Shop &copy; 2020</div> -->
+        <div class="footer__txt">Shop Tienda Online &copy; 2020</div>
     </footer>
 
 
