[ADDED] options the profile of user

--- a/index.html
+++ b/index.html
@@ -46,6 +46,34 @@
                 <img src="src/img/face.jpg" alt="user-name">
             </div>
             <i class="fa fa-caret-down"></i>
+
+            <div class="profile__info">
+                <div class="name">
+                    <img src="src/img/face.jpg" alt="user-name">
+                    <h3>Ricardo Pineda</h3>
+                </div>
+                <hr>
+                <ul class="option">
+                    <li>
+                        <i class="fa fa-user"></i>
+                        <a href="" class="option__item">Mi Perfil</a>
+                    </li>
+                    <li>
+                        <i class="fa fa-shopping-cart"></i>
+                        <a href="" class="option__item">Mis Compras</a>
+                    </li>
+                    <li>
+                        <i class="fa fa-star"></i>
+                        <a href="" class="option__item">Favoritos</a>
+                    </li>
+                    <li>
+                        <a href="" class="option__item">Toggle</a>
+                    </li>
+                </ul>
+
+                <hr>
+                <a href="#!" class="sesion-close"><i class="fa fa-sign-out"></i> Cerrar Sesión</a>
+            </div>
         </div>
 
     </header>
