--- a/product_description.html
+++ b/product_description.html
@@ -4,18 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
+    
     <link rel="shortcut icon" href="src/img/shop-logo.png" type="image/x-icon">
 
-    <title>Tienda Online</title>
+    <title>Name Product</title>
 
     <script src="src/js/fontAwesome.js"></script>
     <link rel="stylesheet" href="src/css/style.css">
 
 </head>
 
-<body class="grid-container">
+<body>
 
     <!-- HEADER WEBSITE -->
     <header class="l-header">
@@ -27,7 +26,7 @@
         <div class="search" id="search">
             <input type="text" name="" id="searchInput" placeholder="Buscar...">
 
-            <buton class="search__btn" id="btn">
+            <buton class="search__btn">
                 <i class="fas fa-search"></i>
             </buton>
         </div>
@@ -80,34 +79,9 @@
     </header>
 
     <!-- MAIN CONTENT  -->
-<main class="l-container" id="container">
+    <main class="l-container">
 
-        <!-- <div class="card">
 
-            <div class="card__image">
-                <img src="src/img/nike-shoes.jpg" alt="product-name">
-            </div>
-
-            <div class="card__content">
-                <h2 class="card__title">Nike Shoes</h2>
-
-                <span class="separate"></span>
-
-                <div class="card__footer">
-                    <span class="stock">
-                        <p>En Existencias</p>
-                        <span class="stock__number">5</span>
-                    </span>
-                    <button class="card__btn">
-                        <i class="fas fa-shopping-cart"></i>
-                        <span class="price">$45.99</span>
-                    </button>
-                </div>
-            </div>
-
-        </div> -->
-
-        
     </main>
 
     <!-- MAIN FOOTER -->
@@ -122,6 +96,7 @@
 
 
     <script src="src/js/main.js" type="module"></script>
+
 </body>
 
 </html>
